Final copy for 12 Mar 2023

--- a/newsletter/2023-03-12.md
+++ b/newsletter/2023-03-12.md
@@ -10,13 +10,13 @@
 
 **It was a profoundly scary week** for decentralized and traditional finance alike.
 
-Silicon Valley Bank shut down on Friday, the largest failure of a U.S. bank since the financial crisis of 2008. A classic [bank run](https://www.investopedia.com/terms/b/bankrun.asp) ultimately did in SVB, but that was really the last straw in a longer series of misfortunes.
+Silicon Valley Bank shut down on Friday, the largest failure of a U.S. bank since the financial crisis of 2008. A classic [bank run](https://www.investopedia.com/terms/b/bankrun.asp) ultimately did in SVB, but that was really just the last straw in a longer series of misfortunes.
 
 Some useful context from the [Wall Street Journal](https://www.wsj.com/articles/svb-financial-pulls-capital-raise-explores-alternatives-including-possible-sale-sources-say-11de7522):
 
 > *SVB’s deposits boomed alongside the tech industry, rising 86% in 2021 to $189 billion and peaking at $198 billion a quarter later. The bank poured large amounts of the deposits into U.S. Treasurys and other government-sponsored debt securities. Soon after, the Fed began increasing rates.*
 
-> Rising rates and the tech downturn caused deposits to decline, spurring the bank to sell substantially all of its available-for-sale securities.*
+> *Rising rates and the tech downturn caused deposits to decline, spurring the bank to sell substantially all of its available-for-sale securities.*
 
 SVB recently announced plans to restructure its balance sheet. But that ultimately backfired, according to [Fast Company](https://www.fastcompany.com/90864105/silicon-valley-bank-shut-down-what-happens-next?utm_medium=social&utm_source=twitter):
 
@@ -26,40 +26,48 @@ SVB recently announced plans to restructure its balance sheet. But that ultimate
 
 SVB thus became the biggest bank to be rescued by FDIC since [Washington Mutual](https://en.wikipedia.org/wiki/Washington_Mutual) in the early days of the 2008 financial crisis.
 
-It's of course never good when comparisons to that sad chapter come into play. It also doesn't help that SVB's meltdown happened on the heels of recent struggles at other firms like investment bank [Credit Suisse](https://www.reuters.com/business/finance/credit-suisse-delays-publication-annual-report-following-sec-call-2023-03-09/) and crypto bank [Silvergate](https://www.theverge.com/2023/3/8/23631320/silvergate-wind-down-liquidiation-announcement) as well.
+It's of course never good when comparisons to that sad chapter come into play. It also doesn't help that SVB's meltdown happened on the heels of recent struggles at  firms like investment bank [Credit Suisse](https://www.reuters.com/business/finance/credit-suisse-delays-publication-annual-report-following-sec-call-2023-03-09/) and crypto bank [Silvergate](https://www.theverge.com/2023/3/8/23631320/silvergate-wind-down-liquidiation-announcement) as well.
 
 People naturally wonder whether a similar global contagion to 2008 could take hold now, spilling into the "real economy" of factories and shopping malls and corner stores and other tangible stuff in everyday life.
 
-The consensus for now seems to be ["probably not."](https://finance.yahoo.com/news/major-bank-failed-why-not-220527304.html) But that doesn't necessarily mean all is well either. There is, after all, a wide spectrum of plausible near-term scenarios between "2008-style armageddon" and "bull market."
+The consensus for now seems to be ["probably not."](https://finance.yahoo.com/news/major-bank-failed-why-not-220527304.html) But that doesn't necessarily mean all is well either. There is, after all, a wide range of plausible near-term scenarios between the extremes of "2008-style armageddon" and "booming bull market."
 
-Here are the best stories I've been reading about the risks ahead:
+Here are the best stories I've been following about the risks ahead:
 
-- **Former FDIC chair Sheila Bair,** who served during the 2008 crisis, spoke with MSNBC's Ali Velshi <!-- TKTKTKTK -->
+- **MSNBC's Ali Velshi caught up with Sheila Bair,** who served as FDIC chair during the 2008 crisis. She provided a nice [layman-friendly explanation](https://www.youtube.com/watch?v=UoJ643e_d4o) of what protections SVB depositors enjoy and what the next steps for FDIC might be to help them move on. Essentially, FDIC ensures all accounts up to $250,000. It will also attempt to sell SVB's business to a larger bank, which would hopefully carry on operations as normal for account holders for years to come. But if such a sale stalls or falls through outright, larger depositors above the $250,000 limit could experience real headaches in recovering their money, according to Bair.
 
-- Customes... <!-- ((Roku))  | Only 16 branches, even though it was TKTKTKth biggest bank in the U.S. | Former FDIC chair Sheila Bair (Velshi on MSNBC) -->
+ - **Unfortunately, the latter profile covers a lot of SVB account holders,** since the bank's clientele focused on startups, founders, and the venture capitalists who back them. Aaron Klein, a former senior official at the U.S. Treasury, noted in an [interview with CNN's Michael Smerconish](https://www.youtube.com/watch?v=rzQx4qmMcJI&t=182s) that SVB had only 16 branches even though it was among America's top 20 banks by total deposits -- a reflection of how focused its business was on relatively large customers.
 
-- **Former clients:** <!-- Roku, Roblox, and RocketLab, SoFi -->
+ - **In the wake of the FDIC takeover, several tech companies** filed disclosures to the Securities and Exchange Comission about their exposure to SVB. Roku, Etsy, Rocket Lab, Roblox, Lending Club, and Bill.com were among those reporting multi-million dollar accounts with SVB whose status is now uncertain, according to [Barron's](https://www.barrons.com/articles/svb-etsy-roblox-roku-bill-news-805f3629#phrase-company?ref=COMPANY%7CRBLX;onlineSignificance=passing-mention). In each case, the cash was a portion of the company's reserves, and none reported that their regular operations will be affected by SVB's failure.
 
-- Fed/markets update. Traders spooked by Powell remarks. Rising expectations of further rate hikes. <!-- https://www.theblock.co/post/217739/crypto-prices-whipsaw-on-fed-chair-powells-congressional-testimony?utm_source=rss&utm_medium=rss -->
+- **USDC issuer Circle had a $3.3 billion account with SVB,** according to [an update](https://www.circle.com/blog/an-update-on-usdc-and-silicon-valley-bank) the company published for users. Worries about the stablecoin briefly caused it to [lose its peg](https://www.axios.com/2023/03/11/circle-usdc-peg-svb) to the dollar on Friday, hitting a low of 88 cents. It has since recovered, recently trading at 96.03 cents, according to [CoinMarketCap](https://coinmarketcap.com/currencies/usd-coin/). Circle vowed that the coin will [remain redeemable](https://www.theblock.co/post/219075/usdc-will-remain-redeemable-1-for-1-with-u-s-dollar-circle-says) for full value against the dollar soon.
 
-- **Keep an eye on the debt ceiling as well.** <!-- Biden's budget is "dead on arrival" -->
+- **The Federal Reserve faces a tough choice.** The U.S. central bank's policy committee, which has been aggressively fighting inflation by raising official interest rate, is due to meet again March 21-22. Data released on Friday showed [strong U.S. job growth](https://www.msn.com/en-us/money/markets/jobs-report-employers-added-311000-jobs-in-february-as-hiring-slowed-unemployment-rose-to-36/ar-AA18sobD), which could be interpreted by the Fed as a sign favoring further rate increases to keep the economy from overheating. But now Fed governors will also have to weigh whether further hikes could destabilize the financial system by undermining banks' bond portfolios.
 
-- Grayscale progress vs SEC. <!-- Need link about opening arguments Rant on Grayscale/SEC showdown.  Grayscale seems to be winning its court case claiming it should be able to turn GBTC into an ETF. In opening arguments, two of three federal judges seemed sympathetic to plaintiff. But ruling could take awhile, perhaps a few months, according to Bloomberg.
- -->
+- **The debt ceiling debate looms large in Washington as well.** If Congress doesn't [raise the legal limit](https://edition.cnn.com/2023/01/18/politics/debt-ceiling-deadline-congress/index.html) on the federal government's borrowing by the summer, the U.S. could default on its payments against outstanding Treasury bonds, currently valued over $30 trillion. Any U.S. default could thus destabilize the entire global debt market and set off a 2008-style crisis.
 
-- CME crypto derivs reach new milestones: https://www.theblock.co/post/217448/crypto-derivatives-on-the-cme-reach-new-milestones-amid-regulatory-uncertainty?utm_source=rss&utm_medium=rss
+Frankly, as someone who covered the 2008 fiasco for the Wall Street Journal, the debt ceiling strikes me as a particularly dangerous piece of the puzzle right now. Perhaps even underappreciated in the mainstream press as a potential trigger event.
+
+Conventional wisdom among U.S. political pundits right now is that the two parties in Congress will go through tough negotiations but ultimately reach some compromise to raise the debt ceiling in time. This is essentially what's happened in the past.
+
+But betting on business as usual or compromise hasn't exactly been a high percentage the last few years in Washington. Regardless of one's personal leanings, I think it's safe to say these aren't normal times in U.S. politics. At all.
+
+To put it a different way, we've recently seen a non-trival number of Congress members posture their way through two presidential impeachments, an insurrection at the capitol that threatened their own lives, and a pandemic that's [killed more than a million Americans](https://usafacts.org/visualizations/coronavirus-covid-19-spread-map) and counting. At every turn, these people have worried more about attention seeking and personal brand building than shaping substantive policy to fix problems.
+
+Why should we *not* think they'd do the same through a U.S. Treasury default?
+
+<!-- Biden's budget is "dead on arrival"
 
 - **Binance's purchase of Voyager** assets is moving forward. https://www.theblock.co/post/217901/binance-us-gets-green-light-to-buy-voyager-digital-assets?utm_source=rss&utm_medium=rss | Binance has grown its market share for four straight months. https://www.coindesk.com/markets/2023/03/08/binance-extends-market-share-for-fourth-consecutive-month/?utm_medium=referral&utm_source=feedly&utm_campaign=headlines | https://blog.cryptocompare.com/market-spotlight-crypto-bull-takes-a-breather-591c240c3e37  
 
 - **Crypto has no chill for economist Paul Krugman.** <!-- The Nobel laureate, New York Times columnist, and outspoken crypto skeptic drew
 mment drew ranted on Twitter about Venmo after he experienced an account problem that left him unable to make payments through the app.
-Nobel-winning economist and outspoken crypto skeptic  (https://twitter.com/paulkrugman/status/1633472068355346437) -->
+Nobel-winning economist and outspoken crypto skeptic  (https://twitter.com/paulkrugman/status/1633472068355346437)
 
-
-
-
-
-<!-- Affiliate riff: Shout out Bitbond...
+- Grayscale progress vs SEC. <!-- Need link about opening arguments Rant on Grayscale/SEC showdown.  Grayscale seems to be winning its court case claiming it should be able to turn GBTC into an ETF. In opening arguments, two of three federal judges seemed sympathetic to plaintiff. But ruling could take awhile, perhaps a few months, according to Bloomberg.
+ -->
+<!--
+- CME crypto derivs reach new milestones: https://www.theblock.co/post/217448/crypto-derivatives-on-the-cme-reach-new-milestones-amid-regulatory-uncertainty?utm_source=rss&utm_medium=rss
 
 Also wrap in other regulatory items:
 
@@ -76,9 +84,6 @@ Also wrap in other regulatory items:
 - **The NFT space saw some welcome milestones.** New exhibit at the Louvre https://www.coindesk.com/web3/2023/03/08/ai-artist-claire-silver-to-show-nft-collection-at-louvre/?utm_medium=referral&utm_source=rss&utm_campaign=headlines | New partnership with Sotheby's https://www.coindesk.com/web3/2023/03/08/sothebys-and-unicorndao-host-international-womens-day-art-auction/?utm_medium=referral&utm_source=rss&utm_campaign=headlines | Favorable comments from German regulators https://www.coindesk.com/policy/2023/03/08/no-nfts-are-securities-yet-german-finance-officials-say/?utm_medium=referral&utm_source=rss&utm_campaign=headlines
 
 - OpenChat conducted a "decentralization sale," is moving to community management. https://www.theblock.co/post/217854/openchat-to-transfer-control-to-community-after-5-5-million-decentralization-sale?utm_source=rss&utm_medium=rss
-
-
-
 
 - Cointelegraph: Russia is waging (and losing) a "crypto war" against Ukraine. https://www.youtube.com/watch?v=j5jQr8nHy7U
 
