--- a/newsletter/2023-03-12.md
+++ b/newsletter/2023-03-12.md
@@ -18,7 +18,7 @@ Some useful context from the [Wall Street Journal](https://www.wsj.com/articles/
 
 > *Rising rates and the tech downturn caused deposits to decline, spurring the bank to sell substantially all of its available-for-sale securities.*
 
-SVB recently announced plans to restructure its balance sheet. But that ultimately backfired, according to [Fast Company](https://www.fastcompany.com/90864105/silicon-valley-bank-shut-down-what-happens-next?utm_medium=social&utm_source=twitter):
+SVB announced further plans to restructure its balance sheet. But that ultimately backfired, according to [Fast Company](https://www.fastcompany.com/90864105/silicon-valley-bank-shut-down-what-happens-next?utm_medium=social&utm_source=twitter):
 
 > *Late Wednesday, SVB said it was hoping to raise $2.25 billion via a stock sale and investments in order to strengthen its balance sheet, as deposits from startups struggling for funding have dropped in recent months. That spooked both customers and, more importantly, venture capitalists, many of whom advised their clients to pull their money from the bank.*
 
@@ -30,31 +30,31 @@ It's of course never good when comparisons to that sad chapter come into play. I
 
 People naturally wonder whether a similar global contagion to 2008 could take hold now, spilling into the "real economy" of factories and shopping malls and corner stores and other tangible stuff in everyday life.
 
-The consensus for now seems to be ["probably not."](https://finance.yahoo.com/news/major-bank-failed-why-not-220527304.html) But that doesn't necessarily mean all is well either. There is, after all, a wide range of plausible near-term scenarios between the extremes of "2008-style armageddon" and "booming bull market."
+For now, the consensus in the market seems to be ["probably not."](https://finance.yahoo.com/news/major-bank-failed-why-not-220527304.html) But that doesn't necessarily mean all is well either. There is, after all, a wide range of plausible near-term scenarios between the extremes of "2008-style armageddon" and "booming bull market."
 
-Here are the best stories I've been following about the risks ahead:
+Some insightful stories about the risks ahead:
 
-- **MSNBC's Ali Velshi caught up with Sheila Bair,** who served as FDIC chair during the 2008 crisis. She provided a nice [layman-friendly explanation](https://www.youtube.com/watch?v=UoJ643e_d4o) of what protections SVB depositors enjoy and what the next steps for FDIC might be to help them move on. Essentially, FDIC ensures all accounts up to $250,000. It will also attempt to sell SVB's business to a larger bank, which would hopefully carry on operations as normal for account holders for years to come. But if such a sale stalls or falls through outright, larger depositors above the $250,000 limit could experience real headaches in recovering their money, according to Bair.
+- **MSNBC's Ali Velshi caught up with Sheila Bair,** who served as FDIC chair during the 2008 crisis. She provided a nice [layman-friendly explanation](https://www.youtube.com/watch?v=UoJ643e_d4o) of what protections SVB depositors enjoy and what the next steps for FDIC might be to help them move on. FDIC ensures all accounts up to $250,000. It will also attempt to sell SVB's business to a larger bank, which would hopefully carry on operations as normal for account holders for years to come. But if such a sale stalls or falls through, larger depositors above the $250,000 limit could experience real headaches in recovering their money, according to Bair.
 
  - **Unfortunately, the latter profile covers a lot of SVB account holders,** since the bank's clientele focused on startups, founders, and the venture capitalists who back them. Aaron Klein, a former senior official at the U.S. Treasury, noted in an [interview with CNN's Michael Smerconish](https://www.youtube.com/watch?v=rzQx4qmMcJI&t=182s) that SVB had only 16 branches even though it was among America's top 20 banks by total deposits -- a reflection of how focused its business was on relatively large customers.
 
  - **In the wake of the FDIC takeover, several tech companies** filed disclosures to the Securities and Exchange Comission about their exposure to SVB. Roku, Etsy, Rocket Lab, Roblox, Lending Club, and Bill.com were among those reporting multi-million dollar accounts with SVB whose status is now uncertain, according to [Barron's](https://www.barrons.com/articles/svb-etsy-roblox-roku-bill-news-805f3629#phrase-company?ref=COMPANY%7CRBLX;onlineSignificance=passing-mention). In each case, the cash was a portion of the company's reserves, and none reported that their regular operations will be affected by SVB's failure.
 
-- **USDC issuer Circle had a $3.3 billion account with SVB,** according to [an update](https://www.circle.com/blog/an-update-on-usdc-and-silicon-valley-bank) the company published for users. Worries about the stablecoin briefly caused it to [lose its peg](https://www.axios.com/2023/03/11/circle-usdc-peg-svb) to the dollar on Friday, hitting a low of 88 cents. It has since recovered, recently trading at 96.03 cents, according to [CoinMarketCap](https://coinmarketcap.com/currencies/usd-coin/). Circle vowed that the coin will [remain redeemable](https://www.theblock.co/post/219075/usdc-will-remain-redeemable-1-for-1-with-u-s-dollar-circle-says) for full value against the dollar soon.
+- **USDC issuer Circle had a $3.3 billion account with SVB,** according to [an update](https://www.circle.com/blog/an-update-on-usdc-and-silicon-valley-bank) the company published for users. Worries about the stablecoin caused it to [lose its peg](https://www.axios.com/2023/03/11/circle-usdc-peg-svb) to the dollar on Friday, hitting a low of 88 cents. It has since recovered, recently trading at 96.03 cents, according to [CoinMarketCap](https://coinmarketcap.com/currencies/usd-coin/). Circle vowed that the coin will [remain redeemable](https://www.theblock.co/post/219075/usdc-will-remain-redeemable-1-for-1-with-u-s-dollar-circle-says) for full value against the dollar soon.
 
-- **The Federal Reserve faces a tough choice.** The U.S. central bank's policy committee, which has been aggressively fighting inflation by raising official interest rate, is due to meet again March 21-22. Data released on Friday showed [strong U.S. job growth](https://www.msn.com/en-us/money/markets/jobs-report-employers-added-311000-jobs-in-february-as-hiring-slowed-unemployment-rose-to-36/ar-AA18sobD), which could be interpreted by the Fed as a sign favoring further rate increases to keep the economy from overheating. But now Fed governors will also have to weigh whether further hikes could destabilize the financial system by undermining banks' bond portfolios.
+- **The Federal Reserve faces a tough choice as well.** The U.S. central bank's policy committee, which has been aggressively fighting inflation by raising official interest rates, is due to meet again March 21-22. Data released Friday showed [strong U.S. job growth](https://www.msn.com/en-us/money/markets/jobs-report-employers-added-311000-jobs-in-february-as-hiring-slowed-unemployment-rose-to-36/ar-AA18sobD), which could be interpreted by the Fed as a sign favoring further rate increases to keep the economy from overheating. But now Fed governors will also have to weigh whether further hikes could destabilize the financial system by undermining banks' bond portfolios.
 
-- **The debt ceiling debate looms large in Washington as well.** If Congress doesn't [raise the legal limit](https://edition.cnn.com/2023/01/18/politics/debt-ceiling-deadline-congress/index.html) on the federal government's borrowing by the summer, the U.S. could default on its payments against outstanding Treasury bonds, currently valued over $30 trillion. Any U.S. default could thus destabilize the entire global debt market and set off a 2008-style crisis.
+- **The debt ceiling debate also looms large in Washington.** If Congress doesn't [raise the legal limit](https://edition.cnn.com/2023/01/18/politics/debt-ceiling-deadline-congress/index.html) on the federal government's borrowing by the summer, the U.S. could default on its payments against outstanding Treasury bonds, currently valued over [$24 trillion](https://www.sifma.org/resources/research/us-treasury-securities-statistics/). Any U.S. default could thus destabilize the entire global debt market and set off a 2008-style crisis.
 
-Frankly, as someone who covered the 2008 fiasco for the Wall Street Journal, the debt ceiling strikes me as a particularly dangerous piece of the puzzle right now. Perhaps even underappreciated in the mainstream press as a potential trigger event.
+Frankly, as someone who covered the 2008 fiasco for the Wall Street Journal, the debt ceiling strikes me as a particularly dangerous piece of the puzzle right now. Perhaps even underappreciated in the mainstream press as a potential trigger event. I'm worried much more about this than insitutions like SVB.
 
 Conventional wisdom among U.S. political pundits right now is that the two parties in Congress will go through tough negotiations but ultimately reach some compromise to raise the debt ceiling in time. This is essentially what's happened in the past.
 
-But betting on business as usual or compromise hasn't exactly been a high percentage the last few years in Washington. Regardless of one's personal leanings, I think it's safe to say these aren't normal times in U.S. politics. At all.
+But betting on normalcy or compromise hasn't exactly been a high percentage the last few years in Washington. Regardless of one's personal leanings, I think it's safe to say these aren't normal times in U.S. politics. At all.
 
-To put it a different way, we've recently seen a non-trival number of Congress members posture their way through two presidential impeachments, an insurrection at the capitol that threatened their own lives, and a pandemic that's [killed more than a million Americans](https://usafacts.org/visualizations/coronavirus-covid-19-spread-map) and counting. At every turn, these people have worried more about attention seeking and personal brand building than shaping substantive policy to fix problems.
+To put it a different way, we've recently seen a non-trivial portion of Congress members posture their way through two presidential impeachments, an insurrection at the capitol that threatened their own lives, and a pandemic that's [killed more than a million Americans](https://usafacts.org/visualizations/coronavirus-covid-19-spread-map) and counting. At every turn, these people have worried more about attention seeking and personal brand building than shaping substantive policy to fix problems.
 
-Why should we *not* think they'd do the same through a U.S. Treasury default?
+Why should we *not* think they would do the same through a U.S. Treasury default?
 
 <!-- Biden's budget is "dead on arrival"
 
