--- a/newsletter/2023-03-19.md
+++ b/newsletter/2023-03-19.md
@@ -3,7 +3,9 @@
 
 *This newsletter is happy to be a media partner of the [Epic Web3 Conference](https://www.epicweb3.com/), coming up June 9 in Lisbon. This can't-miss event will feature an [amazing lineup](https://www.epicweb3.com/#speaker) of speakers from every facet of the web3 space, as you can see in the graphic below.*
 
-*As a special offer for our email subscribers, Epic Web3 is offering a 15% discount on Full or VC passes to their conference. To redeem the #Web3Weekly discount, be sure to apply the code WEB3WEEKLY at checkout when you purchase your ticket [here](http://bit.ly/3kDskvF). [Book your discounted pass today!](http://bit.ly/3kDskvF)*
+*As a special offer for our email subscribers, Epic Web3 is offering a 15% discount on Full or VC passes to their conference. To redeem the #Web3Weekly discount, be sure to apply the code WEB3WEEKLY at checkout when you purchase your ticket [here](http://bit.ly/3kDskvF).
+
+[Book your discounted pass today!](http://bit.ly/3kDskvF)*
 
 [![EWC banner ad](https://w3w.news/img/sponsored/Speakers1.png)](http://bit.ly/3kDskvF)
 
