--- a/newsletter/2023-03-19.md
+++ b/newsletter/2023-03-19.md
@@ -3,41 +3,54 @@
 
 *This newsletter is happy to be a media partner of the [Epic Web3 Conference](https://www.epicweb3.com/), coming up June 9 in Lisbon. This can't-miss event will feature an [amazing lineup](https://www.epicweb3.com/#speaker) of speakers from every facet of the web3 space, as you can see in the graphic below.*
 
-*As a special offer for our email subscribers, Epic Web3 is offering a 15% discount on Full or VC passes to their conference. To redeem the #Web3Weekly discount, be sure to apply the code WEB3WEEKLY at checkout when you purchase your ticket [here](http://bit.ly/3kDskvF).
+*As a special offer for our email subscribers, Epic Web3 is offering a 15% discount on Full or VC passes to their conference. To redeem the #Web3Weekly discount, be sure to apply the code WEB3WEEKLY at checkout when you purchase your ticket [here](http://bit.ly/3kDskvF).*
 
-[Book your discounted pass today!](http://bit.ly/3kDskvF)*
+*[Book your discounted pass today!](http://bit.ly/3kDskvF)*
 
 [![EWC banner ad](https://w3w.news/img/sponsored/Speakers1.png)](http://bit.ly/3kDskvF)
 
 <hr>
 
-**Scary as the new U.S. banking crisis has been,** it has produced one notable winner so far:
+**Harrowing as the new U.S. banking crisis has been,** it has produced one notable winner so far:
 
 Bitcoin.
 
-The token's price rose 19% <!-- Update number Friday --> for the week, even as several more conventional banks [floundered]()<!-- Need link -->. Bitcoin's gains thus handily beat the S&P 500, which fell TK% for the week, driven by a TK% drop in its financial sector.
+The token's price leapt 30% for the week, even as several more conventional banks floundered. Bitcoin thus handily beat the S&P 500, which managed a small gain overall but was hampered by a 6% drop in its financial sector.
 
-The drumbeat of news about troubled banks now seems likely to go on awhile longer, whether or not the worst-case scenario of a new crisis akin to 2008 materializes. Satoshi Nakamoto famously documented his idea for bitcoin in the midst of that crisis, envisioning it as a new monetary system that would avert such debacles in the future. <!-- Add links -->
+Signature Bank [shut down](https://www.forbes.com/sites/brianbushard/2023/03/13/what-happened-to-signature-bank-the-latest-bank-failure-marks-third-largest-in-history/), like Silicon Valley Bank before it. First Republic Bank was [bailed out](https://www.cnn.com/videos/business-money/2023/03/17/first-republic-bank-30-billion-dollar-bailout-christine-romans-cnntm-ldn-vpx.cnn) through a $30 billion cash infusion from its peers. And Credit Suisse is [on the brink](https://www.reuters.com/business/crunch-time-credit-suisse-talks-ubs-seeks-swiss-assurances-2023-03-19/) heading into the new week.
 
-It has frankly had a mixed record in that regard since, notably failing as an inflation hedge in 2022 as fears of that problem spread. The banking scare of 2023, however, is perhaps providing a measure of redemption. <!-- Add links -->
+Investors' initial hopes that SVB would be an isolated incident have now evaporated. That's not to say a new crisis of 2008 proportions is inevitable, mind you. But it's now clear there is some underlying illness in the system that will take awhile longer to heal.
 
-Clearly, bitcoin is benefiting right now from increased speculation that the Federal Reserve will soon move to an easier interest-rate policy, which would favor bets on riskier assets like stocks and crypto. Some true believers are also probably betting that we're moving closer to their long hoped-for day when the Bitcoin network may supplant conventional banking altogether.  <!-- Add links -->
+Satoshi Nakamoto famously [documented his idea](https://bitcoin.org/en/bitcoin-paper) for bitcoin in the midst of the 2008 crisis, envisioning it as a more stable monetary system immunized against such turmoil in the future.
 
-The weeks other notable headlines:
+It has frankly had a mixed record in that regard since, notably failing as an inflation hedge in 2022 as fears of that problem spread. The banking scare of 2023, however, is perhaps providing a measure of redemption.
 
-- **USDC regained its peg to the U.S. dollar**. Measures to save SVB depositors helped. (https://www.nytimes.com/2023/03/15/business/economy/silicon-valley-bank-federal-reserve-regulation.html). Allaire wants to end fractional reserve system. (https://www.theblock.co/post/220214/circle-ceo-jeremy-allaire-talks-crypto-banks)
+Clearly, bitcoin is benefiting right now from increased speculation that the Federal Reserve will soon [move to an easier interest-rate policy](https://www.msn.com/en-us/money/markets/bank-fallout-undermines-fed-rate-hike-expectations-with-full-percentage-point-of-cuts-seen-by-year-end/ar-AA18Fdgt), which would favor bets on riskier assets like stocks and crypto. Some true believers are also probably betting that we've moved a step closer to their long hoped-for day when the Bitcoin network may supplant conventional banking altogether.  
 
-- **Is crypto being unfairly targeted?** <!-- Nic Carter and Barney Frank think so. Also multiple guests on Bloomberg TV's crypto show. -->
+The week's other notable headlines:
+
+- **USDC regained its peg to the U.S. dollar**. Measures to save SVB depositors helped. (https://www.nytimes.com/2023/03/15/business/economy/silicon-valley-bank-federal-reserve-regulation.html). Allaire wants to end fractional reserve system. (https://www.theblock.co/post/220214/circle-ceo-jeremy-allaire-talks-crypto-banks) | - Tether's market cap is now double USDC's (https://decrypt.co/123708/tethers-stablecoin-market-cap-now-double-usdc-svb-chaos)
+
+<!--
+- **Is crypto being unfairly targeted?** <!-- Nic Carter and Barney Frank think so. Also multiple guests on Bloomberg TV's crypto show.  Crypto trade association is requesting documents on crypto de-banking. (https://www.theblock.co/post/220581/blockchain-association-fdic-fed-crypto-banking) | The bids for SVB and Signature had to include no crypto plans. (https://www.reuters.com/business/finance/us-regulator-taps-piper-sandler-new-bid-sell-silicon-valley-bank-sources-2023-03-15/) -->
+
+- McCormack discussion with fractional reserve banking. Caitlin Long. <!-- Get YouTube link: https://www.youtube.com/watch?v=xqX_NkBUQzg -->
 
 - **Fidelity Crypto went live.** (https://www.theblock.co/post/220298/fidelity-crypto-quietly-went-live-giving-millions-of-retail-customers-access-to-bitcoin-ether)
 
-- **The number of NFT traders** is at its lowest point since 2021. (https://www.theblock.co/post/219835/number-of-traders-hits-lowest-since-2021-amid-us-banking-crisis-the-week-in-nfts)
+- State Street cut ties with crypto custody firm Copper. (https://www.msn.com/en-us/money/markets/banking-giant-state-street-cuts-ties-with-crypto-custody-firm-copper/ar-AA18IT2a) | https://www.coindesk.com/business/2023/03/16/crypto-custody-firm-copper-shelves-enterprise-business/
 
-- **India and UAE** are partnering on CBDCs. <!-- Huh? --> (https://www.coindesk.com/policy/2023/03/15/india-and-uae-to-collaborate-on-cbdc-development/)
+- SVB's collapse hit NFT trading volumes hard. (https://www.coindesk.com/web3/2023/03/16/svb-collapse-tanked-nft-trading-volumes-dappradar-report-suggests/) | **The number of NFT traders** is at its lowest point since 2021. (https://www.theblock.co/post/219835/number-of-traders-hits-lowest-since-2021-amid-us-banking-crisis-the-week-in-nfts)
+
+- The Solana DEX Orca is going to block U.S. traders. (https://www.coindesk.com/business/2023/03/16/crypto-exchange-orca-to-block-us-traders-from-website/)
+
+<!--
+- **India and UAE** are partnering on CBDCs. <!-- Huh?  (https://www.coindesk.com/policy/2023/03/15/india-and-uae-to-collaborate-on-cbdc-development/)
 
 - **The African startup Machankura,** a text messaging-based service for transferring bitcoin, has grown its user base by 10x in less than a year. (https://decrypt.co/123641/machankura-african-bitcoin-adoption-feature-phones-text)
 
 - **Moody's downgraded** its credit outlook for U.S. banks. (https://decrypt.co/news-explorer?pinned=132899&title=moodys-lowers-us-bank-outlook-crypto-assets-remain-stable) (https://blockworks.co/news/moodys-eyes-us-bank-downgrade)
+-->
 
 ![EWC banner ad](https://w3w.news/img/sponsored/ewc-banner.png)
 
@@ -48,27 +61,14 @@ Art...
 ![](https://w3w.news/img/illos/ttktktktktktktktktk)
 *"tktktktktkt" by Peter A. McKay × DALL·E*
 
--->
 
-- WME talent agency getting into crypto. (https://www.coindesk.com/consensus-magazine/2023/03/16/wme-william-morris-endeavor-web3-crypto/)
+- WME talent agency getting into crypto. (https://www.coindesk.com/consensus-magazine/2023/03/16/wme-william-morris-endeavor-web3-crypto/) -->
 
-- State Street cut ties with crypto custody firm Copper. (https://www.msn.com/en-us/money/markets/banking-giant-state-street-cuts-ties-with-crypto-custody-firm-copper/ar-AA18IT2a) | https://www.coindesk.com/business/2023/03/16/crypto-custody-firm-copper-shelves-enterprise-business/
-
-- Crypto trade association is requesting documents on crypto de-banking. (https://www.theblock.co/post/220581/blockchain-association-fdic-fed-crypto-banking)
-
-- The bids for SVB and Signature had to include no crypto plans. (https://www.reuters.com/business/finance/us-regulator-taps-piper-sandler-new-bid-sell-silicon-valley-bank-sources-2023-03-15/)
+- **Remember FTX?** New lawsuit accuses social media influencers of promoting FTX without proper disclosure. (https://www.theblock.co/post/220598/new-lawsuit-accuses-social-media-youtube-influencers-of-hyping-ftx-without-proper-disclosure)
 
 - The Ethereum Network's Shanghai fork is scheduled for April 12. (https://www.coindesk.com/tech/2023/03/16/ethereums-shanghai-hard-fork-now-has-an-official-target-date/) | https://decrypt.co/123662/ethereum-is-one-step-away-from-staked-eth-withdrawals
 
-- The Solana DEX Orca is going to block U.S. traders. (https://www.coindesk.com/business/2023/03/16/crypto-exchange-orca-to-block-us-traders-from-website/)
-
-- New lawsuit accuses social media influencers of promoting FTX without proper disclosure. (https://www.theblock.co/post/220598/new-lawsuit-accuses-social-media-youtube-influencers-of-hyping-ftx-without-proper-disclosure)
-
 - ChatGPT-4 launched (https://www.technologyreview.com/2023/03/14/1069823/gpt-4-is-bigger-and-better-chatgpt-openai/)
-
-- Tether's market cap is now double USDC's (https://decrypt.co/123708/tethers-stablecoin-market-cap-now-double-usdc-svb-chaos)
-
-- SVB's collapse hit NFT trading volumes hard. (https://www.coindesk.com/web3/2023/03/16/svb-collapse-tanked-nft-trading-volumes-dappradar-report-suggests/)
 
 - **Rock on.** Shares of tokenized diamonds [are surging](https://www.coindesk.com/business/2023/03/16/investors-flock-to-tokenized-diamond-as-crypto-banking-crisis-props-hard-assets/) as investors look for alternative invesments.
 
