Fleshing out news summary items

--- a/newsletter/2023-03-19.md
+++ b/newsletter/2023-03-19.md
@@ -29,46 +29,23 @@ Clearly, bitcoin is benefiting right now from increased speculation that the Fed
 
 The week's other notable headlines:
 
-- **USDC regained its peg to the U.S. dollar**. Measures to save SVB depositors helped. (https://www.nytimes.com/2023/03/15/business/economy/silicon-valley-bank-federal-reserve-regulation.html). Allaire wants to end fractional reserve system. (https://www.theblock.co/post/220214/circle-ceo-jeremy-allaire-talks-crypto-banks) | - Tether's market cap is now double USDC's (https://decrypt.co/123708/tethers-stablecoin-market-cap-now-double-usdc-svb-chaos)
+- **USDC regained** its [peg to the U.S. dollar](https://markets.businessinsider.com/news/currencies/usdc-stablecoin-regains-dollar-peg-after-silicon-valley-bank-induced-chaos-1032163585), helped by the government's rescue of [SVB's uninsured depositors](https://www.npr.org/2023/03/12/1162975615/the-u-s-takes-emergency-measures-to-protect-all-deposits-at-silicon-valley-bank). That included USDC issuer Circle, whose CEO nevertheless loudly [renewed his criticism](https://www.theblock.co/post/220214/circle-ceo-jeremy-allaire-talks-crypto-banks) of conventional banking. One likely reason he's in a testy mood: Rival stablecoin Tether's market vaulation has risen since the SVB meltdown to more than $75 billion, [double that of USDC](https://decrypt.co/123708/tethers-stablecoin-market-cap-now-double-usdc-svb-chaos).  
 
-<!--
-- **Is crypto being unfairly targeted?** <!-- Nic Carter and Barney Frank think so. Also multiple guests on Bloomberg TV's crypto show.  Crypto trade association is requesting documents on crypto de-banking. (https://www.theblock.co/post/220581/blockchain-association-fdic-fed-crypto-banking) | The bids for SVB and Signature had to include no crypto plans. (https://www.reuters.com/business/finance/us-regulator-taps-piper-sandler-new-bid-sell-silicon-valley-bank-sources-2023-03-15/) -->
+- **Podcaster Peter McCormack** did an excellent interview about the current crisis [with Caitlin Long](https://www.youtube.com/watch?v=xqX_NkBUQzg), who founded a crypto bank after two decades on Wall Street at Salomon Brothers, Credit Suisse and Morgan Stanley. She's gives a nice plain-English explanation of the issues plaguing the U.S. banking system right now, as well as what she sees as crypto's advantages. Like many people in the industry, she believes banks should use a business model with fully backed deposits at all times rather than [fractional reserve](https://www.investopedia.com/terms/f/fractionalreservebanking.asp) lending.
 
-- McCormack discussion with fractional reserve banking. Caitlin Long. <!-- Get YouTube link: https://www.youtube.com/watch?v=xqX_NkBUQzg -->
+- **Citing DappRadar data,** CoinDesk reports that daily trading volume in non-fungible tokens hit [its lowest level since November 2021](https://www.coindesk.com/web3/2023/03/16/svb-collapse-tanked-nft-trading-volumes-dappradar-report-suggests/) after SVB failed.
 
-- **Fidelity Crypto went live.** (https://www.theblock.co/post/220298/fidelity-crypto-quietly-went-live-giving-millions-of-retail-customers-access-to-bitcoin-ether)
+- **Fidelity Crypto went live,** giving millions of the U.S. retirement giant's customers easier access to crypto markets. The app was previously restricted to a waitlist, with users given access on a rolling basis, [according to The Block](https://www.theblock.co/post/220298/fidelity-crypto-quietly-went-live-giving-millions-of-retail-customers-access-to-bitcoin-ether).
 
-- State Street cut ties with crypto custody firm Copper. (https://www.msn.com/en-us/money/markets/banking-giant-state-street-cuts-ties-with-crypto-custody-firm-copper/ar-AA18IT2a) | https://www.coindesk.com/business/2023/03/16/crypto-custody-firm-copper-shelves-enterprise-business/
-
-- SVB's collapse hit NFT trading volumes hard. (https://www.coindesk.com/web3/2023/03/16/svb-collapse-tanked-nft-trading-volumes-dappradar-report-suggests/) | **The number of NFT traders** is at its lowest point since 2021. (https://www.theblock.co/post/219835/number-of-traders-hits-lowest-since-2021-amid-us-banking-crisis-the-week-in-nfts)
-
-- The Solana DEX Orca is going to block U.S. traders. (https://www.coindesk.com/business/2023/03/16/crypto-exchange-orca-to-block-us-traders-from-website/)
-
-<!--
-- **India and UAE** are partnering on CBDCs. <!-- Huh?  (https://www.coindesk.com/policy/2023/03/15/india-and-uae-to-collaborate-on-cbdc-development/)
-
-- **The African startup Machankura,** a text messaging-based service for transferring bitcoin, has grown its user base by 10x in less than a year. (https://decrypt.co/123641/machankura-african-bitcoin-adoption-feature-phones-text)
-
-- **Moody's downgraded** its credit outlook for U.S. banks. (https://decrypt.co/news-explorer?pinned=132899&title=moodys-lowers-us-bank-outlook-crypto-assets-remain-stable) (https://blockworks.co/news/moodys-eyes-us-bank-downgrade)
--->
+- **State Street** announced it is [ending a licensing agreement](https://www.msn.com/en-us/money/markets/banking-giant-state-street-cuts-ties-with-crypto-custody-firm-copper/ar-AA18IT2a) with the crypto custody firm Copper.
 
 ![EWC banner ad](https://w3w.news/img/sponsored/ewc-banner.png)
 
-<!--
+- **Remember FTX?** A new lawsuit accuses several social media influencers of [promoting the failed exchange](https://www.theblock.co/post/220598/new-lawsuit-accuses-social-media-youtube-influencers-of-hyping-ftx-without-proper-disclosure) without proper disclosures.
 
-Art...
+- **The Ethereum Network's Shanghai upgrade** is now [scheduled for April](https://decrypt.co/123662/ethereum-is-one-step-away-from-staked-eth-withdrawals). It will allow users to withdraw staked ether tokens for the first time, Decrypt reports.
 
-![](https://w3w.news/img/illos/ttktktktktktktktktk)
-*"tktktktktkt" by Peter A. McKay × DALL·E*
-
-
-- WME talent agency getting into crypto. (https://www.coindesk.com/consensus-magazine/2023/03/16/wme-william-morris-endeavor-web3-crypto/) -->
-
-- **Remember FTX?** New lawsuit accuses social media influencers of promoting FTX without proper disclosure. (https://www.theblock.co/post/220598/new-lawsuit-accuses-social-media-youtube-influencers-of-hyping-ftx-without-proper-disclosure)
-
-- The Ethereum Network's Shanghai fork is scheduled for April 12. (https://www.coindesk.com/tech/2023/03/16/ethereums-shanghai-hard-fork-now-has-an-official-target-date/) | https://decrypt.co/123662/ethereum-is-one-step-away-from-staked-eth-withdrawals
-
-- ChatGPT-4 launched (https://www.technologyreview.com/2023/03/14/1069823/gpt-4-is-bigger-and-better-chatgpt-openai/)
+- **OpenAI upgraded its ChatGPT application.** The new GPT-4 bot is a more sophisticated artificial intelligence, but OpenAI has been unusually secretive about what exactly has changed in the software, according to the [MIT Technology Review](https://www.technologyreview.com/2023/03/14/1069823/gpt-4-is-bigger-and-better-chatgpt-openai/).
 
 - **Rock on.** Shares of tokenized diamonds [are surging](https://www.coindesk.com/business/2023/03/16/investors-flock-to-tokenized-diamond-as-crypto-banking-crisis-props-hard-assets/) as investors look for alternative invesments.
 
@@ -79,3 +56,22 @@ _**Note: #Web3Weekly content is intended for journalistic purposes only, not as 
 _**Best wishes for a healthy and productive week ahead.**_  
 
 _**-- Peter A. McKay**_
+
+<!--
+
+Leftovers...
+
+- **Is crypto being unfairly targeted?** <!-- Nic Carter and Barney Frank think so. Also multiple guests on Bloomberg TV's crypto show.  Crypto trade association is requesting documents on crypto de-banking. (https://www.theblock.co/post/220581/blockchain-association-fdic-fed-crypto-banking) | The bids for SVB and Signature had to include no crypto plans. (https://www.reuters.com/business/finance/us-regulator-taps-piper-sandler-new-bid-sell-silicon-valley-bank-sources-2023-03-15/)
+
+- **India and UAE** are partnering on CBDCs. <!-- Huh?  (https://www.coindesk.com/policy/2023/03/15/india-and-uae-to-collaborate-on-cbdc-development/)
+
+- **The African startup Machankura,** a text messaging-based service for transferring bitcoin, has grown its user base by 10x in less than a year. (https://decrypt.co/123641/machankura-african-bitcoin-adoption-feature-phones-text)
+
+- **Moody's downgraded** its credit outlook for U.S. banks. (https://decrypt.co/news-explorer?pinned=132899&title=moodys-lowers-us-bank-outlook-crypto-assets-remain-stable) (https://blockworks.co/news/moodys-eyes-us-bank-downgrade)
+
+Art...
+
+![](https://w3w.news/img/illos/ttktktktktktktktktk)
+*"tktktktktkt" by Peter A. McKay × DALL·E*
+
+- WME talent agency getting into crypto. (https://www.coindesk.com/consensus-magazine/2023/03/16/wme-william-morris-endeavor-web3-crypto/) -->
