Adding in a Fed summary item

--- a/newsletter/2023-03-19.md
+++ b/newsletter/2023-03-19.md
@@ -31,6 +31,8 @@ The week's other notable headlines:
 
 - **USDC regained** its [peg to the U.S. dollar](https://markets.businessinsider.com/news/currencies/usdc-stablecoin-regains-dollar-peg-after-silicon-valley-bank-induced-chaos-1032163585), helped by the government's rescue of [SVB's uninsured depositors](https://www.npr.org/2023/03/12/1162975615/the-u-s-takes-emergency-measures-to-protect-all-deposits-at-silicon-valley-bank). That included USDC issuer Circle, whose CEO nevertheless loudly [renewed his criticism](https://www.theblock.co/post/220214/circle-ceo-jeremy-allaire-talks-crypto-banks) of conventional banking. One likely reason he's in a testy mood: Rival stablecoin Tether's market vaulation has risen since the SVB meltdown to more than $75 billion, [double that of USDC](https://decrypt.co/123708/tethers-stablecoin-market-cap-now-double-usdc-svb-chaos).  
 
+- **The Fed's policy committee** will make its next rate announcement Wednesday. For now, Wall Street's consensus expectation is that the U.S. central bank will raise its target by a quarter percentage point -- a slower pace than in recent meetings due to the banking sector's struggles. Traders have also begun betting the Fed will [switch to cutting rates](https://www.reuters.com/markets/rates-bonds/fed-seen-delivering-quarter-point-rate-hike-next-week-2023-03-16/) by summer.
+
 - **Podcaster Peter McCormack** did an excellent interview about the current crisis [with Caitlin Long](https://www.youtube.com/watch?v=xqX_NkBUQzg), who founded a crypto bank after two decades on Wall Street at Salomon Brothers, Credit Suisse and Morgan Stanley. She's gives a nice plain-English explanation of the issues plaguing the U.S. banking system right now, as well as what she sees as crypto's advantages. Like many people in the industry, she believes banks should use a business model with fully backed deposits at all times rather than [fractional reserve](https://www.investopedia.com/terms/f/fractionalreservebanking.asp) lending.
 
 - **Citing DappRadar data,** CoinDesk reports that daily trading volume in non-fungible tokens hit [its lowest level since November 2021](https://www.coindesk.com/web3/2023/03/16/svb-collapse-tanked-nft-trading-volumes-dappradar-report-suggests/) after SVB failed.
