--- a/newsletter/2023-03-19.md
+++ b/newsletter/2023-03-19.md
@@ -11,9 +11,7 @@
 
 <hr>
 
-**Harrowing as the new U.S. banking crisis has been,** it has produced one notable winner so far:
-
-Bitcoin.
+**Harrowing as the new U.S. banking crisis has been,** it has produced one notable winner so far: bitcoin.
 
 The token's price leapt 30% for the week, even as several more conventional banks floundered. Bitcoin thus handily beat the S&P 500, which managed a small gain overall but was hampered by a 6% drop in its financial sector.
 
